# cheltenham-ghost

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROTOCOL.md  README.md  REVIEW.md  ROADMAP.md  THREAT_MODEL.md
crates/m0-spike/: Cargo.toml
crates/m0-spike/src/: main.rs
crates/shroud-core/: Cargo.toml
crates/shroud-core/examples/: m0_spike.rs
crates/shroud-core/src/: lib.rs
crates/shroud-proto/: Cargo.toml
crates/shroud-proto/src/: lib.rs
crates/shroud-speak/: Cargo.toml
crates/shroud-speak/src/: audio.rs  codec.rs  lib.rs  main.rs
docs/: ARCHITECTURE.md  ROADMAP.md
