# shroud-speak — workspace root
#
# "shroud" is the platform; "speak" is the first capability (voice/PTT) bolted onto it.
# The substrate crates (core, proto) are medium-agnostic by design, so a future
# shroud-text / shroud-drop reuses the same onion+Noise+framing spine instead of forking.

[workspace]
resolver = "2"
members = [
    "crates/shroud-core",   # substrate: arti onion transport + Noise + generic framing (lib, medium-agnostic)
    "crates/shroud-proto",  # generic frame envelope, no I/O (lib)
    "crates/shroud-speak",  # the voice app: audio pipeline + voice frame types + front-end (bin)
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Glomar"]
repository = "https://github.com/GlomarGadaffi/shroud-speak"

# Versions intentionally unpinned until M0 fixes a working arti release.
# Candidate set (see docs/ARCHITECTURE.md crate mapping):
[workspace.dependencies]
# --- substrate (shroud-core) ---
# arti-client  = { version = "*", features = ["onion-service-service", "onion-service-client"] }
# tor-rtcompat = "*"
# tokio        = { version = "1", features = ["full"] }
# snow         = "*"          # Noise handshake + transport
# argon2       = "*"          # secret-at-rest KDF
# zeroize      = "*"
# getrandom    = "*"
# --- voice app (shroud-speak) ---
# cpal         = "*"          # cross-platform capture/playback
# audiopus     = "*"          # libopus binding
# fundsp       = "*"          # DSP voice effects (M4)
# crossterm    = "*"
# ratatui      = "*"          # M3 front-end
# qrcode       = "*"
# --- shared ---
# anyhow       = "*"
# tracing      = "*"
