# shroud-speak — workspace root
#
# "shroud" is the platform; "speak" is the first capability (voice/PTT) bolted onto it.
# The substrate crates (core, proto) are medium-agnostic by design, so a future
# shroud-text / shroud-drop reuses the same onion+Noise+framing spine instead of forking.

[workspace]
resolver = "2"
members = [
    "crates/shroud-core",   # substrate: arti onion transport + Noise + generic framing (lib, medium-agnostic)
    "crates/shroud-proto",  # generic frame envelope, no I/O (lib)
    "crates/shroud-speak",  # the voice app: audio pipeline + voice frame types + front-end (bin)
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Glomar"]
repository = "https://github.com/GlomarGadaffi/shroud-speak"

# Versions intentionally unpinned until M0 fixes a working arti release.
# Candidate set (see docs/ARCHITECTURE.md crate mapping):
[workspace.dependencies]
# --- substrate (shroud-core) ---
arti-client   = { version = "0.23.0", features = ["onion-service-service", "onion-service-client", "vanguards", "experimental-api"] }
tor-rtcompat  = "0.23.0"
tor-cell      = "0.23.0"
tor-hsservice = "0.23.0"
tor-proto     = "0.23.0"
tokio         = { version = "1", features = ["full"] }
futures       = "0.3"
anyhow        = "1.0"
tracing       = "0.1"
tracing-subscriber = "0.3"

# --- deferred dependencies (M1 - M4) ---
# cpal         = "0.15"       # cross-platform capture/playback
# audiopus     = "0.3"        # libopus binding (requires CMake + MSVC compiler on Windows)
# fundsp       = "0.17"       # DSP voice effects
# crossterm    = "0.27"
# ratatui      = "0.26"       # M3 front-end
# qrcode       = "0.12"
# snow         = "0.9"        # Noise handshake + transport
# argon2       = "0.5"        # secret-at-rest KDF
# zeroize      = "1.7"
