# shroud-speak — workspace root
#
# "shroud" is the platform; "speak" is the first capability (voice/PTT) bolted onto it.
# The substrate crates (core, proto) are medium-agnostic by design, so a future
# shroud-text / shroud-drop reuses the same onion+Noise+framing spine instead of forking.

[workspace]
resolver = "2"
members = [
    # M0 de-risking spike (throwaway; delete at M0 exit). Tor-only deps so the
    # premise spike can't be blocked by an unrelated audio/UI build.
    "crates/m0-spike",
]
# The real crates are scaffolded at their milestones (see docs/ROADMAP.md) so M0
# doesn't drag in audio / Noise / UI deps before the premise is proven:
#   "crates/shroud-proto",  # M2     generic frame envelope, no I/O (lib)
#   "crates/shroud-core",   # M2/M3  arti onion transport + Noise substrate (lib)
#   "crates/shroud-speak",  # M3     voice app: audio pipeline + front-end (bin)

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Glomar"]
repository = "https://github.com/GlomarGadaffi/shroud-speak"

# Versions intentionally unpinned until M0 fixes a working arti release.
# Candidate set (see docs/ARCHITECTURE.md crate mapping):
[workspace.dependencies]
# --- substrate (shroud-core) ---
# arti-client  = { version = "*", features = ["onion-service-service", "onion-service-client"] }
# tor-rtcompat = "*"
# tokio        = { version = "1", features = ["full"] }
# snow         = "*"          # Noise handshake + transport
# argon2       = "*"          # secret-at-rest KDF
# zeroize      = "*"
# getrandom    = "*"
# --- voice app (shroud-speak) ---
# cpal         = "*"          # cross-platform capture/playback
# audiopus     = "*"          # libopus binding
# fundsp       = "*"          # DSP voice effects (M4)
# crossterm    = "*"
# ratatui      = "*"          # M3 front-end
# qrcode       = "*"
# --- shared ---
# anyhow       = "*"
# tracing      = "*"
