[package]
name = "shroud-speak"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shroud-proto = { path = "../shroud-proto" }
shroud-core = { path = "../shroud-core" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
