[package]
name = "shroud-speak"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shroud-proto = { path = "../shroud-proto" }
shroud-core = { path = "../shroud-core" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# --- M1: audio pipeline ---
audiopus = "0.2"      # libopus binding (vendored; needs CMake + a C compiler to build)
cpal = "0.15"         # cross-platform audio capture/playback (WASAPI/CoreAudio/ALSA/Oboe)

[dev-dependencies]
rtrb = "0.3"          # lock-free SPSC ring for the capture/playback path (example only)
crossterm = "0.27"    # PTT key events for the live loopback example
